learning/11_ingress/admin.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: admin-demo
  namespace: ingress-demo
  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin

  template: 
    metadata:
      labels:
        app: admin 
    spec:
      containers:
        - name: admin
          image: hashicorp/http-echo
          args:
            - "-text=Hello from admin"
          ports:
            - containerPort: 5678
