learning/11_ingress/api.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: api-demo
  namespace: ingress-demo
  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api

  template: 
    metadata:
      labels:
        app: api 
    spec:
      containers:
        - name: api
          image: hashicorp/http-echo
          args:
            - "-text=Hello from api"
          ports:
            - containerPort: 5678
