learning/11_ingress/backend.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: backend-demo
  namespace: ingress-demo
  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend

  template: 
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: hashicorp/http-echo
          args:
            - "-text=Hello from backend"
          ports:
            - containerPort: 5678
