learning/11_ingress/client.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: client-demo
  namespace: ingress-demo
  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client

  template: 
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: hashicorp/http-echo
          args:
            - "-text=Hello from client"
          ports:
            - containerPort: 5678
