learning/11_ingress/backend-service.yml
kind: Service
apiVersion: v1
metadata:
  name: backend-service
  namespace: ingress-demo
spec:
  selector:
    app: backend
  ports:
  - port: 80
    targetPort: 5678
