learning/11_ingress/ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata: 
  name: demo-ingress
  namespace: ingress-demo

spec:
  ingressClassName: nginx

  tls:
    - hosts:
        - blog.local
      secretName: blog-tls

  rules:
  - http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service: 
              name: client-service
              port:
                number: 80
        
        - path: /backend
          pathType: Prefix
          backend:
            service:
              name: backend-service
              port:
                number: 80

        - path: /admin
          pathType: Prefix
          backend:
            service:
              name: admin-service
              port:
                number: 80

        - path: /api
          pathType: Prefix
          backend:
            service:
              name: api-service
              port: 
                number: 80
